--- a/NueCCsel/NueCCsel.tex
+++ b/NueCCsel/NueCCsel.tex
@@ -6,9 +6,14 @@ The aim of the inclusive charged-current electron neutrino selection is to selec
 The selection builds on top of the SliceID (\cref{sec:sliceID}). At first the following cuts are applied:
 \begin{itemize}
     \item Reconstructed, space-charge corrected vertex inside a fiducial volume of \SI{10}{\cm} in $x$ and $y$ and $[ \SI{20}{\cm}, \SI{50}{\cm}]$ in $z$.
-    \item 
+    \item Topological score above 0.15
+    \item CosmicIP > $\SI{15}{\cm}$
+    \item slclustfrac > 0.4
+    \item An electron candidate shower
 \end{itemize}
+here, an electron candidate shower is defined as a particle with a trackscore below 0.3, and hits on all three planes. Furthermore, a minimum calorimeric energy of \SI{75}{\MeV} is required. 
 
+At this stage, the efficiency of the selection is 46\% for $\nu_e$ CC events inside the fiducial volume. This is equivalent to 618 events per \SI{10.1e20}{POT}. The number of LEE signal events passing is approximately 30 per \SI{10.1e20}{POT}. The purity at this stage is 3.0\% and the Data/MC ratio is 0.91.
 \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{NueCCsel/Images/run1/pre_angles.pdf}
